"Implementação do padrão Builder na classe Student e em outras classes com uso da biblioteca Lombok para simplificação do código"